@startuml
left to right direction

title __UserManagement-Exercise Class Diagram__\n

  namespace at.fhj.swd {
    abstract class at.fhj.swd.Entity {
    -id:int
    +Entity()<<constructor>
    +getId():int
    +setId(int):void
    }
  }
  

  namespace at.fhj.swd {
    class at.fhj.swd.Group {
    -name:String
    +Group(int,String)<<constructor>>
    +getUsers():List<User>
    +addUser(User):void
    +getName():String
    +setName(String):void
    }
  }
  

  namespace at.fhj.swd {
    class at.fhj.swd.User {
    -username:String
    -password:String
    +User(int,String,String)<<constructor>>
    +getGroup():Group
    +setGroup(Group):void
    +getUsername():String
    +setUsername(String):void
    +getPassword():String
    +setPassword(String):void
    +toString():String
    }
  }
  

  at.fhj.swd.Group -up-|> at.fhj.swd.Entity
  at.fhj.swd.User -up-|> at.fhj.swd.Entity
  at.fhj.swd.User --> "0..1" at.fhj.swd.Group : group
  'at.fhj.swd.User "0..*" <-- at.fhj.swd.Group : users
  at.fhj.swd.Group --> "0..*" at.fhj.swd.User : users

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
